--- a/src/assets/styles/utils/_variables.scss
+++ b/src/assets/styles/utils/_variables.scss
@@ -7,5 +7,10 @@ $color-ace: #F3F3F3;
 
 $gilroy: 'Gilroy', sans-serif;
 
-$grid-width: 1200px;
-$tablet: 768px;
+$desktop-xl: 1800;
+$laptop: 1440;
+$desktop: 1025;
+$tablet: 768;
+$desktop-vh: 750;
+$mobile: 320;
+
