--- a/src/views/pages/franchise.pug
+++ b/src/views/pages/franchise.pug
@@ -23,7 +23,7 @@ block content
               | Магазин экомоющих на розлив “полоскун”
             p Cвой бизнес за 400 000 рублей
             p с оборотом от 2 000 000 рублей в год
-            a(href="#").new-design__button оставить заявку
+            a(href="#contact").new-design__button оставить заявку
           .col-12.col-lg-7.offset-lg-1.slide-block__right
             .slide-block__box
               p Уже более 100 опорных партнеров в России и ближнем зарубежье
@@ -49,21 +49,25 @@ block content
               span Производителем всей линейки средств, представленных в магазинах "Полоскун" является ООО «Мидэкс групп» — это инновационное научно-производственное предприятие, которое находится в г. Белгород и специализируется на изготовлении профессиональных технических моющих средств под маркой 1ЕЗО(, дерматологических защитных кремов под маркой СЕСО.
               | Мы снабжаем защитными средствами такие крупные предприятия как Калашников, Сухой, завод ГАЗ, РЖД, Ленинградская Атомная станция, изготавливаем и поставляем технические моющие средства на пищевые производства. Сегодня в компании работает более 40 человек, выпуск продукции происходит круглосуточно.
           .col-12.col-lg-6
-            .about-block__img-box
-              img(src=require('images/about01.png')).about-block__img
-              img(src=require('images/about02.png')).about-block__img
+            .about-block__img-box.row
+              .col-12.col-sm-6.col-lg-12.about-block__img
+                img(src=require('images/about01.png'))
+              .col-12.col-sm-6.col-lg-12.about-block__img
+                img(src=require('images/about02.png'))
     .franch-block
       .wrapper-inner
         .row
           .franch-block__img-promo
             img(src=require('images/franch01.png'))
+            .franch-block__human
+              p!="<span>штат</span> 1-2<br>человека"
           .col-12
             .franch-block__title
               h2 ФРАНШИЗА “ПОЛОСКУН” - ЭТО:
-          .col-12.col-md-4.franch-block__box.franch-block__box--left
+          .col-12.col-md-4.franch-block__box.franch-block__box--left.order-1.order-md-0
             .franch-block__item
               .franch-block__item-img
-                img(src=require('images/franch/franch-item02.png'))
+                img(src=require('images/franch/franch-item01.png'))
               .franch-block__item-text
                 p!="Cредний чек<br>"
                   span 500 рублей
@@ -80,13 +84,9 @@ block content
               .franch-block__item-text
                 p!="помещение<br>"
                   span 15 м2
-          .col-12.col-md-4.franch-block__box.franch-block__box--center
+          .col-12.col-md-4.franch-block__box.franch-block__box--center.order-0.order-md-1
             img(src=require('images/logo.png')).franch-block__img-logo
-            .franch-block__human
-              p!="<span>штат</span> 1-2<br>человека"
-            .franch-block__img-promo
-              img(src=require('images/franch01.png'))
-          .col-12.col-md-4.franch-block__box.franch-block__box--right
+          .col-12.col-md-4.franch-block__box.franch-block__box--right.order-2.order-md-2
             .franch-block__item
               .franch-block__item-img
                 img(src=require('images/franch/franch-item04.png'))
