--- a/src/assets/styles/components/_tabs.scss
+++ b/src/assets/styles/components/_tabs.scss
@@ -1,4 +1,4 @@
-.tabs {
+.steps-block-slider {
   display: flex;
 
   &__content {
@@ -8,9 +8,6 @@
     &-item {
       position: relative;
       height: 100%;
-      opacity: 0;
-      display: none;
-      visibility: hidden;
       transition: visibility 0.4s, opacity 0.4s;
 
       img {
@@ -43,11 +40,32 @@
           line-height: 24px;
           color: $color-one-light;
         }
+
+        @media (max-width: 767px) {
+          left: 15px;
+          right: 15px;
+        }
       }
-      &.is-active {
-        display: block;
-        opacity: 1;
-        visibility: visible;
+    }
+
+    .swiper {
+      overflow: hidden;
+      height: 100%;
+    }
+
+    @media (max-width: 767px) {
+      flex: 0 0 100%;
+      max-width: 100%;
+      min-height: 600px;
+
+      &-item {
+        h1 {
+          font-size: 22px;
+          line-height: 22px;
+        }
+        p {
+          line-height: 22px;
+        }
       }
     }
   }
@@ -64,10 +82,14 @@
       p {
         font-weight: 500;
         font-size: 20px;
-        line-height: 30px;
+        line-height: 150%;
         text-transform: uppercase;
         color: $color-one-light;
         transition: color 0.4s;
+
+        @media (max-width: 991px) {
+          font-size: 14px;
+        }
       }
 
       &:hover {
@@ -100,6 +122,10 @@
           visibility: visible;
         }
       }
+    }
+
+    @media (max-width: 767px) {
+      display: none;
     }
   }
 }
