--- a/src/views/pages/franchise.pug
+++ b/src/views/pages/franchise.pug
@@ -146,9 +146,9 @@ block content
     .why-block
       .wrapper-inner
         .row
-          .col-12.col-lg-4.offset-lg-4
+          .col-12.col-md-6.col-xl-4.offset-xl-4
             h2 ПОЧЕМУ КЛИЕНТ ПРИДЕТ К ВАМ?
-          .col-12.col-lg-4
+          .col-12.col-md-6.col-xl-4
             .why-block__item
               .why-block__icon
                 img(src=require('images/icons/check.svg'))
