--- a/src/views/pages/manufacturing.pug
+++ b/src/views/pages/manufacturing.pug
@@ -56,31 +56,31 @@ block content
               .steps-block-slider__content
                 .swiper
                   .swiper-wrapper
-                    .swiper-slide
+                    .swiper-slide(data-slide="0")
                       .steps-block-slider__content-item
                         img(src=require('images/steps01.png'))
                         .steps-block-slider__content-item-text
                           h1 производство продукции
                           p В вашем распоряжении наше собственное производство в городе Белгород. Специализирующееся на выпуске жидкой бытовой химии, смываемых косметических средств и ДСИЗ. Современное оборудование позволяет работать ссовершенно разными составами.
-                    .swiper-slide
+                    .swiper-slide(data-slide="1")
                       .steps-block-slider__content-item
                         img(src=require('images/steps01.png'))
                         .steps-block-slider__content-item-text
                           h1 Закупка сырья и материалов
                           p В вашем распоряжении наше собственноепроизводство в городе Белгород. Специализирующееся на выпуске жидкой бытовой химии, смываемых косметических средств и ДСИЗ. Современное оборудование позволяет работать ссовершенно разными составами.
-                    .swiper-slide
+                    .swiper-slide(data-slide="2")
                       .steps-block-slider__content-item
                         img(src=require('images/steps01.png'))
                         .steps-block-slider__content-item-text
                           h1 Полный цикл изготовления
                           p В вашем распоряжении наше собственноепроизводство в городе Белгород. Специализирующееся на выпуске жидкой бытовой химии, смываемых косметических средств и ДСИЗ. Современное оборудование позволяет работать ссовершенно разными составами.
-                    .swiper-slide
+                    .swiper-slide(data-slide="3")
                       .steps-block-slider__content-item
                         img(src=require('images/steps01.png'))
                         .steps-block-slider__content-item-text
                           h1 Документальное сопровождение
                           p В вашем распоряжении наше собственноепроизводство в городе Белгород. Специализирующееся на выпуске жидкой бытовой химии, смываемых косметических средств и ДСИЗ. Современное оборудование позволяет работать ссовершенно разными составами.
-                    .swiper-slide
+                    .swiper-slide(data-slide="4")
                       .steps-block-slider__content-item
                         img(src=require('images/steps01.png'))
                         .steps-block-slider__content-item-text
@@ -105,7 +105,7 @@ block content
             img(src=require('images/bottle.png'))
           .col-12.col-lg-4.steps-block__quote
             p осуществляется согласно техническому заданию на разработку,а также по предоставленным Заказчиком российским или зарубежным образцам-аналогам.
-            a(href="#").new-design__button получить консультацию
+            a(href="#contact").new-design__button получить консультацию
     .advantages-block
       .wrapper-inner
         .row
