--- a/src/assets/styles/layout/_page.scss
+++ b/src/assets/styles/layout/_page.scss
@@ -639,19 +639,35 @@
       display: flex;
 
       input {
-        width: 80px;
-        flex-shrink: 0;
-        margin-right: 20px;
+        display: none;
+
+        &:checked ~ label::before {
+         background-image: url("@~images/icons/icon-checkbox.svg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: 18px;
+        }
       }
 
       label {
         width: 87px;
-        opacity: 0.4;
         font-family: $gilroy;
         letter-spacing: 0.03em;
         font-weight: 300;
+        display: flex;
         font-size: 12px;
         line-height: 18px;
+        color: #999;
+
+        &:before {
+          content: '';
+          width: 80px;
+          flex-shrink: 0;
+          margin-right: 20px;
+          display: block;
+          height: 100%;
+           background-color: #F6F7F8;
+        }
       }
     }
   }
