--- a/src/assets/styles/_app.scss
+++ b/src/assets/styles/_app.scss
@@ -18,6 +18,8 @@
 @import './components/button';
 @import './components/link';
 @import './components/tabs';
+@import './components/modal';
+@import './components/city';
 
 /*
   Layout
