--- a/src/assets/styles/base/_new-design.scss
+++ b/src/assets/styles/base/_new-design.scss
@@ -60,10 +60,11 @@ html {
   &__button {
     display: inline-block;
     text-transform: uppercase;
+    text-align: center;
     font-family: $gilroy;
     font-weight: 700;
-    font-size: vw(14);
-    line-height: vw(20);
+    font-size: px(14);
+    line-height: px(20);
     padding: vw(30) vw(74);
     color: $color-white;
     background-color: $color-two;
@@ -81,8 +82,6 @@ html {
 
     @include desktop {
       padding: px(30) px(74);
-      font-size: px(14);
-      line-height: px(20);
     }
   }
 }
