--- a/src/assets/styles/components/_city.scss
+++ b/src/assets/styles/components/_city.scss
@@ -5,6 +5,18 @@
 
   &__box {
     width: 100%;
+    visibility: hidden;
+    opacity: 0;
+
+    &.is-visible {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+
+  &__regoin {
+    visibility: visible;
+    opacity: 1;
   }
 
   p.city__title {
